<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>limo_interface</name>
  <version>0.1.0</version>
  <description>limo interface as a ROS 2 node</description>
  <maintainer email="taichi.higashide@cozmic.io">Taichi Higashide</maintainer>
  <license>Apache License 2.0</license>

  <author email="taichi.higashide@cozmic.io">Taichi Higashide</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>can_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>limo_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
